# prometheus-nvml-exporter

./: Cargo.toml  README.md  main.rs  nvml-prometheus-exporter.service  prometheus-nvml-exporter.service
