[package]
name = "prometheus-nvml-exporter"
description = "A rather basic exporter for nvidia graphics cards' metrics"
version = "0.1.0"
authors = ["Julius Michaelis <michaelis@jp.fujitsu.com>"]
edition = "2021"

[[bin]]
name = "prometheus-nvml-exporter"
path = "main.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
nvml-wrapper = "0.9.0"
prometheus_exporter = "0.8.5"
prometheus = { version = "0.13.3", features = [ "process" ] }
lazy_static = "1.4.0"
clap = { version = "4.4.18", features = ["derive", "env", "string"] }
