[package]
name = "prometheus-nvml-exporter"
description = "A rather basic exporter for nvidia graphics cards' metrics"
version = "0.1.0"
authors = ["Julius Michaelis <michaelis@jp.fujitsu.com>"]
edition = "2024"
rust-version = "1.86"

[[bin]]
name = "prometheus-nvml-exporter"
path = "main.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
nvml-wrapper = "0.10.0"
prometheus = { version = "*", features = ["process"] }
lazy_static = "1.5.0"
clap = { version = "4.5.37", features = ["derive", "env", "string"] }

[dependencies.prometheus_exporter]
git = "https://github.com/AlexanderThaller/prometheus_exporter.git"
rev = "c49efe614486f998b20eb410ae0caf3e904cf540"
